[package]
name = "ytdlp-gui"
version = "1.0.2"
edition = "2021"
description = "a GUI for yt-dlp written in Rust"
license = "GPL-3.0"
repository = "https://github.com/BKSalman/ytdlp-gui"
homepage = "https://github.com/BKSalman"
readme = "README.md"
authors = ["Salman"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "mantask"
]

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
dirs = "4.0.0"
iced = { version = "0.12.1" }
iced_aw = { version = "0.8.0", features = ["tabs", "modal", "card"], default-features = false }
iced_runtime = "0.12.1"
iced_table = "0.12.0"
rfd = "0.13"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.104"
shared_child = "1.0.0"
toml = "0.5.10"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"

[features]
explain = []

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/ytdlp-gui", dest = "/usr/bin/ytdlp-gui", mode = "755" },
  { source = "data/applications/ytdlp-gui.desktop", dest = "/usr/share/applications/ytdlp-gui.desktop", mode = "644" },
  { source = "data/icons/*/apps/ytdlp-gui.png", dest = "/usr/share/icons/hicolor/", mode = "644" },
]

[package.metadata.generate-rpm.requires]
yt-dlp = "*"
"(ffmpeg or ffmpeg-free)" = "*"

[package.metadata.deb]
depends = "yt-dlp, ffmpeg"
assets = [
    ["target/release/ytdlp-gui", "usr/bin/", "755"],
    ["data/applications/ytdlp-gui.desktop", "usr/share/applications/", "644"],
    ["data/icons/*/apps/ytdlp-gui.png", "usr/share/icons/hicolor/", "644"],
]

[package.metadata.aur]
depends = ["ffmpeg", "yt-dlp"]
