[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cargo_metadata = "0.17.0"
glob = "0.3.1"
hex = "0.4.3"
minreq = { version = "2.9.0", features = ["https-rustls"] }
sha2 = "0.10.7"
strum = { version = "0.25.0", features = ["derive"] }
walkdir = "2.3.3"
xflags = "0.3.1"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

